# financial-tools

./: .gitignore  LICENSE  README.md  README_DEV.md  pyproject.toml  requirements.txt  run_demo.py  run_tests.py  setup.cfg
financial_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: 0_overview.ipynb  1_retirement_simulation_demo.ipynb  2_exploration.ipynb
retirement_simulator/: __init__.py  engine.py
shared_logic/: __init__.py  math_utils.py
tests/: test_engine.py  test_shared_math.py
